--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prview":"vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
