change image folter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://siva-codez.github.io/catalog_with_filters/",
+  "homepage": "https://siva-codez.github.io/catalog_with_filters",
   "name": "catalog",
   "private": true,
   "version": "0.0.0",
